--- a/requirements.txt
+++ b/requirements.txt
@@ -7,9 +7,11 @@ Flask-SQLAlchemy==3.1.1
 greenlet==3.2.3
 itsdangerous==2.2.0
 Jinja2==3.1.6
+mariadb==1.1.12
 MarkupSafe==3.0.2
 numpy==2.3.1
 openpyxl==3.1.5
+packaging==25.0
 pandas==2.3.0
 PyMySQL==1.1.1
 python-dateutil==2.9.0.post0
